2008-09-20	Jannis Pohlmann <jannis@xfce.org>

	* ChangeLog: Insert 4.5.90 release information at the correct location
	  so that everyone can follow the changes made after that release.

2008-09-20	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/main.c, xfce4-mixer/xfce-mixer-window.c,
	  xfce4-mixer/xfce4-mixer.desktop.in.in: Don't use the word "Xfce" in
	  the window title - be more generic and just call it "Mixer". Improve
	  a few labels and tooltips. Oh, and most importantly: Improve the
	  desktop file installed for the mixer application: Add the mixer to
	  the Audio and X-XFCE categories, support startup notification and
	  add Terminal=false.

2008-09-20	Jannis Pohlmann <jannis@xfce.org>

	* icons/, xfce4-mixer/xfce-mixer-window.c: Drop xfce4-mixer.{png,svg} 
	  icon in favour of multimedia-volume-control.
	* libxfce4mixer/xfce-mixer-card.{c,h}: Fix compiler warnings due to
	  invalid conversion between "const gchar **" and "gchar * const *".

2008-09-18	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add git svn revision versioning support.
	* configure.in.in, libxfce4mixer/Makefile.am, xfce4-mixer/Makefile.am:
	  Re-add svn version tag. Add dependency on xfconf.
	* libxfce4mixer/xfce-mixer-card.{c,h},
	  libxfce4mixer/xfce-mixer-preferences.{c,h}, xfce4-mixer/main.c,
	  xfce4-mixer/xfce-mixer-controls-dialog.c,
	  xfce4-mixer/xfce-mixer-window.c, xfce4-mixer/xfce-mixer.c: Add
	  xfconf support.

2008-09-14	Jannis Pohlmann <jannis@xfce.org>

	* === 4.5.90 released ===

2008-09-12	Jannis Pohlmann <jannis@xfce.org>

	* NEWS, README, TODO: Updated for the alpha release.

2008-09-09	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/, panel-plugin/, xfce4-mixer/: Fix a lot of compiler
	  warnings and return statements without a return value.

2008-09-03	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card-combo.{c,h}: Remove the method
	  xfce_mixer_card_combo_get_n_cards() again. 